通过配置生成二级菜单

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["next/babel"],
   "plugins": [
     ["module-resolver", {
-      "root": ["src"],
+      "root": ["."],
       "alias": {
         "@": ".",
       }
